syntax = "proto3";

option csharp_namespace = "Wejo.Common.Core.Protos";

package notifications;

service GameParticipantService {
  rpc SendGameJoinRequest (GameJoinRequest) returns (EmptyResponse);
}

message GameJoinRequest {
  string gameId = 1;
  string requesterId = 2;
  string hostId = 3;
}

message PlaypalAddedRequest {
  string userId = 1;
  string playpalId = 2;
  string gameId = 3;
}

message EmptyResponse {}